made requested minor adjustments

--- a/inst/pages/04_containers.qmd
+++ b/inst/pages/04_containers.qmd
@@ -88,7 +88,7 @@ assay(tse, "counts")[1:5,1:7]
 So, in summary, in the world of microbiome analysis, an assay is essentially a way to quantify and understand the composition of microbes in a given sample, which is super important for all kinds of research, from human health to the environment. 
 
 
-Further more, to illustrate the use of multiple assays, the relative abundance data can be 
+Furthermore, to illustrate the use of multiple assays, the relative abundance data can be 
 calculated and stored along the original count data using `transformAssay`.
 
 ```{r}
@@ -108,7 +108,7 @@ transformation. This is in fact, a requirement for the assays.
 
 ### colData
 
-colData contains information about the samples used in the study. This information can include details such as the sample ID, the primers used in the analysis, the barcodes associated with the sample (truncated or complete), the type of sample (e.g. soil, faecal, mock) and a description of the sample.
+`colData` contains information about the samples used in the study. This information can include details such as the sample ID, the primers used in the analysis, the barcodes associated with the sample (truncated or complete), the type of sample (e.g. soil, faecal, mock) and a description of the sample.
 
 ```{r coldata}
 colData(tse)
@@ -497,14 +497,14 @@ After reading the data in R, ensure the following:
 
 - coldata (`samples`): `DataFrame`, with sample IDs as rownames. If
   this is a `data.frame` you can use the function `DataFrame()` to
-  change the format.  Column names are free. The rownames in coldata
+  change the format.  Column names are free. The rownames in `coldata`
   should match with colnames in abundance table.
 
 **Always ensure that the tables have rownames!** The _TreeSE_ constructor compares 
 rownames and ensures that, for example, right samples are linked with right patient.
 
 Also ensure that the row and column names match one-to-one between
-abundance table, rowdata, and coldata:
+abundance table, `rowdata`, and `coldata`:
 
 ```{r importingcsv2}
 # Match rows and columns
@@ -665,14 +665,14 @@ rowData(tse) <- DataFrame(rowdata_modified)
 head(rowData(tse))
 ```
 
-We notice that the imported biom file did not contain any colData yet,
+We notice that the imported biom file did not contain any `colData` yet,
 so only an empty dataframe appears in this slot.
 
 ```{r}
 head(colData(tse))
 ```
 
-Let us add colData from the sample metadata, which is stored in a CSV file.
+Let us add `colData` from the sample metadata, which is stored in a CSV file.
 
 ```{r}
 # CSV file with colnames in the first row and rownames in the first column
@@ -684,7 +684,7 @@ sample_meta <- read.csv(sample_meta_file_path,
 colData(tse) <- DataFrame(sample_meta)
 ```
 
-Now the colData includes the sample metadata.
+Now the `colData` includes the sample metadata.
 
 ```{r}
 head(colData(tse))
