--- a/inst/pages/97_extra_materials.qmd
+++ b/inst/pages/97_extra_materials.qmd
@@ -266,12 +266,12 @@ tse <- sampleMetadata %>%
 tse_Genus <- mergeFeaturesByRank(tse, rank="genus")
 
 # Performing PCoA with Bray-Curtis dissimilarity.
-tse_Genus <- runMDS(tse_Genus,
+tse_Genus <- runMDS(tse_Genus, #adds reduced dimensionalities to tse_Genus
               FUN = vegan::vegdist,
               method = "bray",
-              ncomponents = 3,
-              assay.type = "relative_abundance",
-              name = "MDS_bray")
+              ncomponents = 3, # calculates three principal coordinates
+              assay.type = "relative_abundance", # calculates Bray-Curtis from relative abundace
+              name = "MDS_bray") #name of the PCoA within the tse 
 
 e <- attr(reducedDim(tse_Genus, "MDS_bray"), "eig")
 rel_eig <- e / sum(e[e > 0])
