made requested minor adjustments

--- a/inst/pages/04_containers.qmd
+++ b/inst/pages/04_containers.qmd
@@ -120,13 +120,13 @@ To illustrate, ***X.SampleID*** gives the sample identifier, ***SampleType*** in
 
 `rowData` contains data on the features of the analyzed samples. Of particular
 interest to the microbiome field, this is used to store taxonomic information.
-This taxonomic information is extremely important for understanding the composition and diversity of the microbiome in each sample analyzed. It enables you to identify the different types of micro-organisms present in samples, and to explore the relationships between microbiome composition and various environmental or health factors.
+This taxonomic information is extremely important for understanding the composition and diversity of the microbiome in each sample analyzed. 
+It enables you to identify the different types of micro-organisms present in samples.
+It also allows you to explore the relationships between microbiome composition and various environmental or health factors.
 
 ```{r rowdata}
 rowData(tse)
 ```
-
-
 
 ### rowTree  
 
