Added eval false last chunk

--- a/inst/pages/04_containers.qmd
+++ b/inst/pages/04_containers.qmd
@@ -797,6 +797,6 @@ write_feather(molten_mae,path)
 
 And as a CSV file.
 
-```{r}
+```{r, eval=FALSE}
 write.csv(molten_mae, "path/to/mae.csv", row.names=FALSE)
 ```
