Specified dataframe method to use

--- a/inst/pages/04_containers.qmd
+++ b/inst/pages/04_containers.qmd
@@ -758,14 +758,14 @@ Conversion is possible between other data formats. Interested readers can refer 
 
 ### Export TreeSummarizedExperiment
 
-Exporting a `TreeSE` data container can be done using *feather* package. TSE object has to be converted into a dataframe (`DataFrame`). The output file is a .feather file, which can be imported in other languages such as Julia or Python. For information, have a look at the [FeatherFile](https://juliapackages.com/p/featherfiles) Julia package and [feather-format](https://pypi.org/project/feather-format/) Python library.
+Exporting a `TreeSE` data container can be done using *feather* package. TSE object has to be converted into a dataframe (`data.frame` and not `DataFrame`) . The output file is a .feather file, which can be imported in other languages such as Julia or Python. For information, have a look at the [FeatherFile](https://juliapackages.com/p/featherfiles) Julia package and [feather-format](https://pypi.org/project/feather-format/) Python library.
 
 ```{r, eval=FALSE}
 # Import TSE
 library(mia)
 data(GlobalPatterns, package="mia")
 tse <- GlobalPatterns
-# Convert into a DataFrame
+# Convert into a data.frame 
 tse <- transformAssay(tse, MARGIN = "samples", method="relabundance")
 molten_tse <- meltAssay(tse,
                         add_row_data = TRUE,
@@ -788,7 +788,7 @@ write.csv(molten_tse, "path/to/tse.csv", row.names=FALSE)
 Exporting a `MultiAssayExperiment` data container can also be done using *feather* package.
 
 ```{r, eval=FALSE}
-# Convert into a DataFrame
+# Convert into a data.frame
 molten_mae <- longFormat(mae)
 molten_mae <- data.frame(molten_mae)
 path <- "path/to/mae.feather"
