--- a/inst/pages/98_exercises.qmd
+++ b/inst/pages/98_exercises.qmd
@@ -662,10 +662,40 @@ prevalenceTse <- tse[rowData(tse)$Phylum %in% prevalentFeatures,]
 prevalenceTse <- subsetByPrevalentFeatures(altExp(tse,"Phylum"), detection = 0, 
                                           prevalence = 50/100)
 ```  
-3. Visualize prevalence using a violin/bean plot.
+3. How many features are left ?
 
 ```{r}
 #| label: prevalence-ex3
+#| eval: True
+#| code-fold: true
+#| code-summary: "Show solution"
+
+length(assay(prevalenceTse, "counts"))
+```  
+
+4. Recalculate the most prevalent features based on relative abundance. 
+How many are left?
+
+```{r}
+#| label: prevalence-ex4
+#| eval: True
+#| code-fold: true
+#| code-summary: "Show solution"
+
+tse <- transformAssay(tse, MARGIN = "samples", method="relabundance")
+
+altExp(tse,"Phylum2") <- mergeFeaturesByRank(tse, "Phylum") 
+
+prevalenceTse <- subsetByPrevalentFeatures(altExp(tse,"Phylum2"), detection = 0, 
+                                           prevalence = 50/100)
+
+length(assay(prevalenceTse, "relabundance"))
+```  
+
+5. Visualize prevalence using a violin/bean plot.
+
+```{r}
+#| label: prevalence-ex5
 #| eval: False
 #| code-fold: true
 #| code-summary: "Show solution"
