--- a/inst/pages/98_exercises.qmd
+++ b/inst/pages/98_exercises.qmd
@@ -636,7 +636,7 @@ Useful functions: nrow, ncol, dim, summary, table, quantile, unique, scater::add
 #| code-fold: true
 #| code-summary: "Show solution"
 
-# First, merge the features by rank
+# First, merge the features by rank and add it as an alternative experiment.
 altExp(tse,"Phylum") <- mergeFeaturesByRank(tse, "Phylum") 
 
 # Then get the prevalence for a specific sample 
@@ -653,13 +653,13 @@ getPrevalence(altExp(tse,"Phylum"), detection = 1/100,
 #| code-summary: "Show solution"
 
 # Get the prevalent features
-prevalentFeatures <- getPrevalentFeatures(altExp(tse,"Phylum"), detection = 0, 
+prevalentFeatures <- getPrevalentFeatures(tse, detection = 0, 
                                           prevalence = 50/100)
 # Subset the data to the prevalent features
 prevalenceTse <- tse[rowData(tse)$Phylum %in% prevalentFeatures,]
 
 # Alternatively subsetByPrevalentFeatures can be used to subset directly
-prevalenceTse <- subsetByPrevalentFeatures(altExp(tse,"Phylum"), detection = 0, 
+prevalenceTse <- subsetByPrevalentFeatures(tse, detection = 0, 
                                           prevalence = 50/100)
 ```  
 3. How many features are left ?
@@ -684,9 +684,7 @@ How many are left?
 
 tse <- transformAssay(tse, MARGIN = "samples", method="relabundance")
 
-altExp(tse,"Phylum2") <- mergeFeaturesByRank(tse, "Phylum") 
-
-prevalenceTse <- subsetByPrevalentFeatures(altExp(tse,"Phylum2"), detection = 0, 
+prevalenceTse <- subsetByPrevalentFeatures(tse, detection = 0, 
                                            prevalence = 50/100)
 
 length(assay(prevalenceTse, "relabundance"))
@@ -704,13 +702,13 @@ length(assay(prevalenceTse, "relabundance"))
 library(scater)
 
 # Store the prevalence of each taxon
-rowData(altExp(tse,"Phylum"))$prevalence <- 
-    getPrevalence(altExp(tse,"Phylum"), detection = 1/100, 
+rowData(tse)$prevalence <- 
+    getPrevalence(tse, detection = 1/100, 
                   sort = FALSE,
                   assay.type = "counts", as_relative = TRUE)
 
 # Then plot the row data
-plotRowData(altExp(tse,"Phylum"), "prevalence", 
+plotRowData(tse, "prevalence", 
             colour_by = "Phylum")
 ```   
 
