removed agglomeration and fixed the p-values

--- a/inst/pages/98_exercises.qmd
+++ b/inst/pages/98_exercises.qmd
@@ -1098,8 +1098,6 @@ features by a rank of your choice.
 #| code-summary: "Show solution"
 
 tse <- transformAssay(tse, MARGIN = "samples", method="relabundance")
-
-tse <- agglomerateByRank(tse, rank = "Species")
 ```
 
 3. Select a group of samples and perform a permutational analysis on the calculated relative abundance using Bray-Curtis dissimilarities 
@@ -1121,13 +1119,13 @@ tse$Group <- tse$SampleType == "Feces"
 #| code-fold: true
 #| code-summary: "Show solution"
 
-tse2 <- runRDA(tse,
+tse <- runRDA(tse,
                assay.type = "relabundance",
                formula = assay ~ Group,
                distance = "bray",
                na.action = na.exclude)
 
-rda_info <- attr(reducedDim(tse2, "RDA"), "significance")
+rda_info <- attr(reducedDim(tse, "RDA"), "significance")
 
 rda_info
 ```
@@ -1144,11 +1142,7 @@ due to random variation
 #| code-fold: true
 #| code-summary: "Show solution"
 
-p_values <- c(permanova["Group", "Pr(>F)"], permanova2["Group", "Pr(>F)"])
-
-p_values <-as.data.frame(p_values)
-
-rownames(p_values) <- c("adonis2", "dbRDA+anova.cca")
+rda_info$permanova$`Pr(>F)`[1:2]
 ```
 
 Useful functions: scater::runMDS, runRDA, vegan::anova.cca, transformAssay, agglomerateByRank, ggplot, scater::plotReducedDim, vegan::adonis2
