--- a/inst/pages/98_exercises.qmd
+++ b/inst/pages/98_exercises.qmd
@@ -1132,10 +1132,11 @@ rda_info
 
 rda_info now holds information on the variation differences between 
 the chosen groups, in our case, the homogeneity test has a p-value of 0.01, 
-indicating that the groups are statistically different and it's unlikely to be 
-due to random variation
+indicating that the groups have different  variances, making it so that the 
+permanova results are compromised and do not correctly explain whether there are
+significant differences between groups.
 
-5. Extract the p-values. Can the differences between samples be explained with variables from their metadata? 
+5. Nevertheless, extract the p-values. Can the differences between samples be explained with variables from their metadata? 
 ```{r}
 #| label: dbRDA-ex5
 #| eval: FALSE
