--- a/inst/pages/Introductory-workflow/Introductory.qmd
+++ b/inst/pages/Introductory-workflow/Introductory.qmd
@@ -23,22 +23,22 @@ library(mia)
 library(DT)
 ```
 
-You can either choose to use your own data or one of the built-in datasets provided by mia which you may find in the [**OMA book**](https://microbiome.github.io/OMA/docs/devel/pages/04_containers.html#sec-example-data) :
+You can either choose to use your own data or one of the built-in datasets provided by mia which you may find here @sec-example-data:
 
-In this tutorial, we'll be using the [Tengeler2020](https://microbiome.github.io/mia/reference/Tengeler2020.html) dataset. This dataset was made by A.C. Tengeler to try to demonstrate the impact of altered microbiomes on the brain structure. Here's how we can load the data into our R environment :
+In this tutorial, we'll be using the [Tengeler2020](https://microbiome.github.io/mia/reference/Tengeler2020.html) dataset. This dataset was made by A.C. Tengeler to try to demonstrate the impact of altered microbiomes on the brain structure. Here's how we can load the data into our R environment:
 
 ```{r}
 data("Tengeler2020", package="mia")
 tse <- Tengeler2020
 ```
 
-There are of course other ways to import your data using the [**mia package**](https://microbiome.github.io/mia/). These include: using either [**your own data**](https://microbiome.github.io/OMA/docs/devel/pages/04_containers.html#sec-import-from-file) or by converting an existing object to a *TreeSummarizedExperiment* object as stated in [**this section of the OMA book**](https://microbiome.github.io/OMA/docs/devel/pages/04_containers.html#conversions-between-data-formats-in-r).
+There are of course other ways to import your data using the [**mia package**](https://microbiome.github.io/mia/). These include: using either **your own data** @sec-import-from-file or by converting an existing object to a *TreeSummarizedExperiment* object as stated in @sec-conversions-between-data-formats-in-r.
 
 <hr>
 
-# Storing microbial data
+# Storing microbiome data
 
-*TreeSummarizedExperiment* or TSE objects is the type of object used within the [**mia package**](https://microbiome.github.io/mia/) to store your data. It's a versatile and multi-purpose data type that allows for an efficient way to store and access data.
+*TreeSummarizedExperiment* or TreeSE object is the type of object used within the [**mia package**](https://microbiome.github.io/mia/) to store your data. It's a versatile and multi-purpose data type that allows for an efficient way to store and access data.
 
 ## Assays
 
@@ -86,7 +86,7 @@ In the example, ***Kingdom*** indicates whether the feature belongs to the kingd
 
 To illustrate the structure of a *TreeSummarizedExperiment*, here's [**an article**](https://f1000research.com/articles/9-1246) that uses this type of object. Also, please take a look at figure 1 below.
 
-![1. Storing microbial data : the structure of a TreeSummarizedExperiment](images/TSE-structure.svg){.lightbox .contentimg}
+![1. Storing microbial data: the structure of a TreeSummarizedExperiment](images/TSE-structure.svg){.lightbox .contentimg}
 
 <hr>
 
@@ -158,7 +158,7 @@ plotColData(tse_alpha,
   labs(y=expression(Richness[Observed]))
 ```
 
-To go even further, we can also compare the estimated Shannon index to the observed richness . Shannon quantifies the diversity in terms of both the number of different species (richness) and the evenness of their distribution (abundance) and is calculated as such :
+To go even further, we can also compare the estimated Shannon index to the observed richness . Shannon quantifies the diversity in terms of both the number of different species (richness) and the evenness of their distribution (abundance) and is calculated as such:
 
 $$
 H' = -\sum_{i=1}^{R} p_i \ln(p_i)
@@ -166,7 +166,7 @@ $$ p~i~ being the proportion of a certain microorganism.
 
 <hr/>
 
-First, we can easily calculate this measure and add them to our TSE.
+First, we can easily calculate this measure and add them to our TreeSE.
 
 ```{r}
 tse_alpha <- mia::estimateDiversity(tse_alpha, 
@@ -199,7 +199,7 @@ plots <- lapply(plots, "+",
 
 ```
 
-It's very important to make all these comparisons in order to quantify diversity and compare samples in our data using different measures. - You can find other types of comparisons directly in the book [**here**](https://microbiome.github.io/OMA/docs/devel/pages/14_alpha_diversity.html).
+It's very important to make all these comparisons in order to quantify diversity and compare samples in our data using different measures. - You can find other types of comparisons directly in the book @sec-community-diversity.
 
 <hr>
 
@@ -209,7 +209,7 @@ Community similarity refers to the way microorganisms resemble each other in ter
 
 $$
 BC_{ij} = \frac{\sum_{k} |A_{k} - B_{k}|}{\sum_{k} (A_{k} + B_{k})}
-$$ Luckily for us, the [**mia package**](https://microbiome.github.io/mia/) provides an easy way to calculate the Bray-Curtis dissimilarity and add it to our TSE using the `transformAssay` method:
+$$ Luckily for us, the [**mia package**](https://microbiome.github.io/mia/) provides an easy way to calculate the Bray-Curtis dissimilarity and add it to our TreeSE using the `transformAssay` method:
 
 ```{r}
 tse <- transformAssay(tse,
@@ -259,7 +259,7 @@ p <- plotReducedDim(tse, "MDS_bray") +
 ggplotly(p)
 ```
 
-However, the axes are not very informative and the amount of captured variance by the algorithm is nowhere to be found. We can tweak the plot to show some more information as such :
+However, the axes are not very informative and the amount of captured variance by the algorithm is nowhere to be found. We can tweak the plot to show some more information as such:
 
 ```{r}
 # Calculate explained variance
@@ -274,7 +274,7 @@ p <- p + labs(x = paste("PCoA 1 (", round(100 * rel_eig[[1]], 1), "%", ")", sep 
 ggplotly(p)
 ```
 
-There we have it! Each axis shows the amount of variance or in our case dissimilarity retained by each principal coordinate. You can additionally add more options to color by a certain characteristic for example. More on this can be found in [**this section**](https://microbiome.github.io/OMA/docs/devel/pages/20_beta_diversity.html#comparing-communities-by-beta-diversity-analysis) of the OMA book.
+There we have it! Each axis shows the amount of variance or in our case dissimilarity retained by each principal coordinate. You can additionally add more options to color by a certain characteristic for example. More on this can be found in @sec-comparing-communities-by-beta-diversity-analysis.
 
 <hr>
 
@@ -282,7 +282,7 @@ There we have it! Each axis shows the amount of variance or in our case dissimil
 
 <h2>Acknowledgements</h2>
 
-This notebook has been carefully crafted by :
+This notebook has been carefully crafted by:
 
 ![](images/profile-pics/axel.webp){.profilepic} **Axel Dagnaud**
 
