--- a/inst/pages/04_containers.qmd
+++ b/inst/pages/04_containers.qmd
@@ -710,7 +710,7 @@ Now the rowTree slot contains the phylogenetic tree:
 head(rowTree(tse))
 ```
 
-### Conversions between data formats in R
+### Conversions between data formats in R {#sec-conversions-between-data-formats-in-r}
 
 If the data has already been imported in R in another format, it
 can be readily converted into `TreeSE`, as shown in our next
